--- a/mystyles.css
+++ b/mystyles.css
@@ -501,6 +501,7 @@
 .certificate-container img {
   width: 100%;
   height: auto;
+  margin: auto;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
